领域驱动设计开发

--- a/游戏服务器开发/20230626.md
+++ b/游戏服务器开发/20230626.md
@@ -1,4 +1,5 @@
 ## 1.项目结构变化
+
 ## 2.项目遇到的一些问题
 - 排行榜的实现
 - 排行榜更新需要注意的一些问题 （先更新排名，再移除）
@@ -6,6 +7,7 @@
 - 策划案子与配表的设计很重要（任务类型，没有按模块来分，会很冗余）
 
 ## 3.time.Now 开发环境会遇到的问题
+ local
 
 ## 4.MMO 战斗流程
 
@@ -32,5 +34,7 @@ gateway->world->logic_node{pick}
 总之
 
 world，控制处理掉落哪些道具，最终结算数据的维护（记录） 
+
+## 领域开发设计
 
 
