go 语言基础，深入了解 add

--- a/领域设计开发.md
+++ b/领域设计开发.md
@@ -1,10 +1,10 @@
 ## 贫血模型
- 贫血模型是指领域对象里只有get和set方法
-    - 优点：<br>
- 各层单向依赖，结构清楚，易于实现和维护<br>
- 设计简单易行，底层模型非常稳定
-    - 缺点：<br>
-不够面向对象，service 层会很厚重
+ 贫血模型是指领域对象/结构体里只有get和set方法
+* 优点：<br>
+各层单向依赖，结构清楚，易于实现和维护<br>
+设计简单易行，底层模型非常稳定
+ * 缺点：<br>
+不够面向对象，service/逻辑层 会很厚重
 ```
 case:
 
@@ -20,9 +20,9 @@ Controller + VO（View Object）
 充血模型是指数据和对应的业务逻辑被封装到同一个（类/结构体）中。因此，这种充血模型满足面向对象的封装特性，是典型的面向对象编程风格。
 
 - 优点<br>
-面向对象，业务逻辑符合单一职责，sevice层不会厚重
+面向对象，业务逻辑符合单一职责，sevice/逻辑层不会厚重
 - 缺点<br>
-缺点是如何划分业务逻辑，什么样的逻辑应该放在领域对象中，什么样的业务逻辑应该放在service中，这是很含糊的。
+缺点是如何划分业务逻辑，什么样的逻辑应该放在领域对象/结构体中，什么样的业务逻辑应该放在service中，这是很含糊的。
 
 ## 对比分析
 
